--- a/docs/notebooks/01_ge_grids.ipynb
+++ b/docs/notebooks/01_ge_grids.ipynb
@@ -21,10 +21,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f4142f38",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'% -----------------------------------------------------------------------------\\n% GE template (layout-only)\\n% Target: current nicematrix (CodeBefore/Body/CodeAfter + \\\\SubMatrix syntax)\\n% -------------'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from matrixlayout.ge import render_ge_tex\n",
     "\n",
@@ -44,10 +55,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "6b2ebfd5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<svg\\n   width=\"31.266876pt\"\\n   height=\"23.921875pt\"\\n   viewBox=\"0 0 31.266876 23.921875\"\\n   version=\"1.2\"\\n   id=\"svg55\"\\n   sodipodi:docname=\"output.svg\"\\n   xmlns:inkscape=\"http://www.inkscape.org/name'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from matrixlayout.ge import render_ge_svg\n",
     "\n",
@@ -67,15 +89,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "590c78c0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[SubMatrixSpan(name='A0', row_start=1, col_start=3, row_end=2, col_end=4, block_row=0, block_col=1)]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from matrixlayout.ge import grid_bundle\n",
     "\n",
     "bundle = grid_bundle(matrices=[[None, [[1, 2], [3, 4]]]])\n",
-    "bundle.keys(), bundle[\"spans\"][:1]\n"
+    "bundle.submatrix_spans"
    ]
   },
   {
@@ -89,10 +122,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e0324234",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[SubMatrixSpan(name='A0', row_start=1, col_start=3, row_end=2, col_end=4, block_row=0, block_col=1)]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from matrixlayout.ge import grid_submatrix_spans\n",
     "\n",
@@ -111,15 +155,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "8db0dfa2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('delimiters/color=.,hlines=1', '1-3', '2-4')]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from matrixlayout.ge import grid_line_specs\n",
     "\n",
-    "specs = grid_line_specs(grid=(0, 0), hlines=1)\n",
-    "specs\n"
+    "specs = grid_line_specs(\n",
+    "      matrices=[[None, [[1, 2], [3, 4]]]],\n",
+    "      targets=[(0, 1)],\n",
+    "      hlines=1,\n",
+    "  )\n",
+    "specs"
    ]
   },
   {
@@ -133,15 +192,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "9a9ef7c0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['\\\\tikz \\\\node [fill=yellow!25, inner sep=1.0pt, fit=(1-3-medium) (2-4-medium)] {};']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from matrixlayout.ge import grid_highlight_specs\n",
     "\n",
-    "specs = grid_highlight_specs(grid=(0, 0), submatrix=(\"0:1\", \"0:1\"), background=\"yellow!25\")\n",
-    "specs\n"
+    "specs = grid_highlight_specs(\n",
+    "      matrices=[[None, [[1, 2], [3, 4]]]],\n",
+    "      blocks=[((0, 1), \"0:1\", \"0:1\")],  # grid, rows, cols\n",
+    "      color=\"yellow!25\",\n",
+    "  )\n",
+    "specs"
    ]
   },
   {
@@ -155,18 +229,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "5a171672",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(('(1-3.center)', 'x_1', 'anchor=center'),\n",
+       " ('(1-4.center)', 'x_2', 'anchor=center'))"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from matrixlayout.ge import render_ge_tex_specs\n",
     "\n",
     "specs = [\n",
-    "    {\"grid\": (0, 0), \"side\": \"above\", \"labels\": [\"x_1\", \"x_2\"]},\n",
+    "    {\"grid\": (0, 1), \"side\": \"above\", \"labels\": [\"x_1\", \"x_2\"]},\n",
     "]\n",
-    "rows, cols = render_ge_tex_specs(specs)\n",
-    "rows, cols\n"
+    "rows, cols = render_ge_tex_specs(\n",
+    "  matrices=[[None, [[1, 2], [3, 4]]]],\n",
+    "  targets=specs,\n",
+    ")\n",
+    "rows, cols"
    ]
   },
   {
@@ -180,15 +269,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "d8b73f98",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 1)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from matrixlayout.ge import resolve_ge_grid_name\n",
     "\n",
     "matrices = [[None, [[1, 2], [3, 4]]], [[[1, 0], [0, 1]], [[1, 2], [0, 1]]]]\n",
-    "resolve_ge_grid_name(\"A1\", matrices=matrices)\n"
+    "resolve_ge_grid_name(\"A1\", matrices=matrices)"
    ]
   },
   {
@@ -202,22 +302,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "4886789d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DECORATIONS SPEC (dict entries)\n",
+      "\n",
+      "Required\n",
+      "- grid: (row, col) of the block. Optional if the grid has a single block.\n",
+      "\n",
+      "Selectors (shared)\n",
+      "- entries: list of (r,c) tuples (overrides rows/cols/submatrix).\n"
+     ]
+    }
+   ],
    "source": [
     "from matrixlayout.ge import decorations_help\n",
     "\n",
-    "print(decorations_help()[:200])\n"
+    "print(decorations_help()[:200])"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
