--- a/docs/notebooks/05_formatting_selectors.ipynb
+++ b/docs/notebooks/05_formatting_selectors.ipynb
@@ -103,68 +103,86 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c73b9861",
    "metadata": {},
    "source": [
-    "## `make_decorator`\nBuild a decorator from keyword options.\n"
-   ],
-   "id": "c73b9861"
+    "## `make_decorator`\n",
+    "Build a decorator from keyword options.\n"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "bafba0b3",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "from matrixlayout.formatting import make_decorator\n\n",
+    "from matrixlayout.formatting import make_decorator\n",
+    "\n",
     "dec = make_decorator(text_color=\"blue\", bf=True)\n",
     "dec(\"x\")\n"
-   ],
-   "outputs": [],
-   "execution_count": null,
-   "id": "bafba0b3"
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "3567ac89",
    "metadata": {},
    "source": [
-    "## Selector helpers (rows/cols/all, eigen/SVD vectors)\nShort examples for the remaining selector helpers.\n"
-   ],
-   "id": "3567ac89"
+    "## Selector helpers (rows/cols/all, eigen/SVD vectors)\n",
+    "Short examples for the remaining selector helpers.\n"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "894d7bc1",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "from matrixlayout.formatting import sel_rows, sel_cols, sel_all, sel_vec, sel_vec_range\n\n",
+    "from matrixlayout.formatting import sel_rows, sel_cols, sel_all, sel_vec, sel_vec_range\n",
+    "\n",
     "sel_rows([0, 2]), sel_cols([1]), sel_all(), sel_vec(0, 0, 1), sel_vec_range((0, 0, 0), (0, 0, 2))\n"
-   ],
-   "outputs": [],
-   "execution_count": null,
-   "id": "894d7bc1"
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "111a2843",
    "metadata": {},
    "source": [
-    "## `apply_decorator`\nApply a decorator to a single entry.\n"
-   ],
-   "id": "111a2843"
+    "## `apply_decorator`\n",
+    "Apply a decorator to a single entry.\n"
+   ]
   },
   {
    "cell_type": "code",
-   "metadata": {},
-   "source": [
-    "from matrixlayout.formatting import apply_decorator, decorator_color\n\n",
-    "apply_decorator(decorator_color(\"red\"), 0, 0, 1, \"1\")\n"
-   ],
-   "outputs": [],
    "execution_count": null,
-   "id": "0655030e"
+   "id": "0655030e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from matrixlayout.formatting import apply_decorator, decorator_color\n",
+    "\n",
+    "apply_decorator(decorator_color(\"red\"), 0, 0, 1, \"1\")\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
