--- a/docs/notebooks/02_qr_grids.ipynb
+++ b/docs/notebooks/02_qr_grids.ipynb
@@ -21,16 +21,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "9b6e6bc8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'% -----------------------------------------------------------------------------\\n% GE template (layout-only)\\n% Target: current nicematrix (CodeBefore/Body/CodeAfter + \\\\SubMatrix syntax)\\n% -------------'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from matrixlayout.qr import render_qr_tex\n",
     "\n",
-    "matrices = [[None, None, [[1, 2], [3, 4]], [[1, 0], [0, 1]]]]\n",
-    "tex = render_qr_tex(matrices=matrices)\n",
-    "tex[:200]\n"
+    "matrices = [\n",
+    "      [None, None, [[1, 2], [3, 4]], [[1, 0], [0, 1]]],\n",
+    "      [None, None, [[1, 0], [0, 1]], [[1, 0], [0, 1]]],\n",
+    "      [[[1, 0], [0, 1]], [[1, 0], [0, 1]], [[1, 0], [0, 1]], None],\n",
+    "  ]\n",
+    "\n",
+    "tex = render_qr_tex(matrices=matrices, array_names=False)\n",
+    "tex[:200]"
    ]
   },
   {
@@ -44,16 +60,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "018ecf09",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<svg\\n   width=\"96.964859pt\"\\n   height=\"34.035507pt\"\\n   viewBox=\"0 0 96.964859 34.035507\"\\n   version=\"1.2\"\\n   id=\"svg132\"\\n   sodipodi:docname=\"output.svg\"\\n   xmlns:inkscape=\"http://www.inkscape.org/nam'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from matrixlayout.qr import render_qr_svg\n",
     "\n",
     "matrices = [[None, None, [[1, 2], [3, 4]], [[1, 0], [0, 1]]]]\n",
-    "svg = render_qr_svg(matrices=matrices)\n",
-    "svg[:200]\n"
+    "svg = render_qr_svg(matrices=matrices, array_names=False)\n",
+    "svg[:200]"
    ]
   },
   {
@@ -67,15 +94,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d1005b5a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'qr_grid_bundle' from 'matrixlayout.qr' (/opt/ea42gh/matrixlayout/matrixlayout/qr.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mImportError\u001b[39m                               Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mmatrixlayout\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mqr\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m qr_grid_bundle\n\u001b[32m      3\u001b[39m bundle = qr_grid_bundle(matrices=[[\u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;28;01mNone\u001b[39;00m, [[\u001b[32m1\u001b[39m, \u001b[32m2\u001b[39m], [\u001b[32m3\u001b[39m, \u001b[32m4\u001b[39m]], [[\u001b[32m1\u001b[39m, \u001b[32m0\u001b[39m], [\u001b[32m0\u001b[39m, \u001b[32m1\u001b[39m]]]])\n\u001b[32m      4\u001b[39m bundle.keys()\n",
+      "\u001b[31mImportError\u001b[39m: cannot import name 'qr_grid_bundle' from 'matrixlayout.qr' (/opt/ea42gh/matrixlayout/matrixlayout/qr.py)"
+     ]
+    }
+   ],
    "source": [
     "from matrixlayout.qr import qr_grid_bundle\n",
     "\n",
     "bundle = qr_grid_bundle(matrices=[[None, None, [[1, 2], [3, 4]], [[1, 0], [0, 1]]]])\n",
-    "bundle.keys()\n"
+    "bundle.keys()"
    ]
   },
   {
@@ -84,28 +123,51 @@
    "metadata": {},
    "source": [
     "## `resolve_qr_grid_name`\n",
-    "Resolve QR grid matrix names to positions.\n"
+    "Resolve QR grid matrix names to positions."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "7aeedd0b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0, 2)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from matrixlayout.qr import resolve_qr_grid_name\n",
     "\n",
     "matrices = [[None, None, [[1, 2], [3, 4]], [[1, 0], [0, 1]]]]\n",
-    "resolve_qr_grid_name(\"QR0x2\", matrices=matrices)\n"
+    "resolve_qr_grid_name(\"QR0x2\", matrices=matrices)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
