--- a/docs/notebooks/06_rendering_templates.ipynb
+++ b/docs/notebooks/06_rendering_templates.ipynb
@@ -89,70 +89,51 @@
   },
   {
    "cell_type": "markdown",
+   "id": "eb18527e",
    "metadata": {},
    "source": [
-    "## Nicematrix callouts\n\nRender delimiter callouts and infer labels for GE grids.\n"
-   ],
-   "id": "eb18527e"
+    "## Nicematrix callouts\n",
+    "\n",
+    "Render delimiter callouts and infer labels for GE grids.\n"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "cdc47762",
    "metadata": {},
+   "outputs": [],
    "source": [
     "from matrixlayout.nicematrix_decor import (\n",
     "    render_delim_callout,\n",
     "    render_delim_callouts,\n",
     "    infer_ge_matrix_labels,\n",
     "    infer_ge_layer_callouts,\n",
-    ")\n\n",
+    ")\n",
+    "\n",
     "matrices = [[None, [[1, 2], [3, 4]]], [[[1, 0], [0, 1]], [[1, 2], [0, 1]]]]\n",
     "labels = infer_ge_matrix_labels(matrices)\n",
     "layer_callouts = infer_ge_layer_callouts(matrices)\n",
     "single = render_delim_callout({\"name\": \"A0\", \"label\": \"A\"})\n",
     "multi = render_delim_callouts(layer_callouts, available_names=[\"A0\", \"A1\", \"E1\"], name_map={(0,1):\"A0\", (1,0):\"E1\", (1,1):\"A1\"})\n",
     "single, labels[:1], multi[:1]\n"
-   ],
-   "id": "cdc47762",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "0bc4245f",
    "metadata": {},
    "source": [
-    "## Jinja environments\nCreate or fetch environments, then render templates.\n"
-   ],
-   "id": "0bc4245f"
+    "## Jinja environments\n",
+    "Create or fetch environments, then render templates.\n"
+   ]
   },
   {
    "cell_type": "code",
-   "metadata": {},
-   "source": [
-    "from matrixlayout.jinja_env import render_template\n",
-    "\n",
-    "# Example assumes a template named ge.tex.j2 is on the template path.\n",
-    "# Wrap in try/except for environments without the templates.\n",
-    "try:\n",
-    "    out = render_template(\"ge.tex.j2\", {\"mat_rep\": \"\", \"mat_format\": \"\", \"preamble\": \"\", \"extension\": \"\"})\n",
-    "    out[:50]\n",
-    "except Exception as err:\n",
-    "    str(err)[:80]\n"
-   ],
+   "execution_count": null,
    "id": "b8f2ed5d",
+   "metadata": {},
    "outputs": [],
-   "execution_count": null
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## `render_template`\nRender a named template (if present on the template path).\n"
-   ],
-   "id": "6779eb63"
-  },
-  {
-   "cell_type": "code",
-   "metadata": {},
    "source": [
     "from matrixlayout.jinja_env import render_template\n",
     "\n",
@@ -163,17 +144,53 @@
     "    out[:50]\n",
     "except Exception as err:\n",
     "    str(err)[:80]\n"
-   ],
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6779eb63",
+   "metadata": {},
+   "source": [
+    "## `render_template`\n",
+    "Render a named template (if present on the template path).\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "74fe650a",
+   "metadata": {},
    "outputs": [],
-   "execution_count": null
+   "source": [
+    "from matrixlayout.jinja_env import render_template\n",
+    "\n",
+    "# Example assumes a template named ge.tex.j2 is on the template path.\n",
+    "# Wrap in try/except for environments without the templates.\n",
+    "try:\n",
+    "    out = render_template(\"ge.tex.j2\", {\"mat_rep\": \"\", \"mat_format\": \"\", \"preamble\": \"\", \"extension\": \"\"})\n",
+    "    out[:50]\n",
+    "except Exception as err:\n",
+    "    str(err)[:80]\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
