--- a/docs/notebooks/05_formatting_selectors.ipynb
+++ b/docs/notebooks/05_formatting_selectors.ipynb
@@ -21,14 +21,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "842a06fb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('3.14', 'alpha')"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from matrixlayout.formatting import latexify, norm_str\n",
     "\n",
-    "latexify(3.14), norm_str(\":alpha\")\n"
+    "latexify(3.14), norm_str(\":alpha\")"
    ]
   },
   {
@@ -42,10 +53,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "49cbc5d6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('\\\\color{black}{\\\\boxed{x}}',\n",
+       " '\\\\color{red}{x}',\n",
+       " '\\\\colorbox{yellow!25}{x}',\n",
+       " '\\\\color{black}{\\\\mathbf{x}}')"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from matrixlayout.formatting import decorator_box, decorator_color, decorator_bg, decorator_bf\n",
     "\n",
@@ -53,7 +78,7 @@
     "color = decorator_color(\"red\")\n",
     "bg = decorator_bg(\"yellow!25\")\n",
     "bf = decorator_bf()\n",
-    "box(\"x\"), color(\"x\"), bg(\"x\"), bf(\"x\")\n"
+    "box(\"x\"), color(\"x\"), bg(\"x\"), bf(\"x\")"
    ]
   },
   {
@@ -67,14 +92,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "54bb5e20",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((0, 0), {'row': 1}, {'col': 2}, ((0, 0), (1, 1)))"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from matrixlayout.formatting import sel_entry, sel_row, sel_col, sel_box\n",
     "\n",
-    "sel_entry(0, 0), sel_row(1), sel_col(2), sel_box((0, 0), (1, 1))\n"
+    "sel_entry(0, 0), sel_row(1), sel_col(2), sel_box((0, 0), (1, 1))"
    ]
   },
   {
@@ -88,17 +124,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "c7fbad85",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[[['1', '\\\\color{red}{2}'], ['3', '4']]]]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from matrixlayout.formatting import decorate_tex_entries, expand_entry_selectors, decorator_color\n",
     "\n",
     "entries = [[\"1\", \"2\"], [\"3\", \"4\"]]\n",
+    "grid = [[entries]]  # one block at (0,0)\n",
+    "\n",
     "sel = expand_entry_selectors([sel_entry(0, 1)], 2, 2)\n",
-    "out = decorate_tex_entries(entries, sel, decorator_color(\"red\"))\n",
-    "out\n"
+    "out = decorate_tex_entries(grid, 0, 0, decorator_color(\"red\"), entries=sel)\n",
+    "out"
    ]
   },
   {
@@ -112,15 +161,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "bafba0b3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\\\color{blue}{\\\\mathbf{x}}'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from matrixlayout.formatting import make_decorator\n",
     "\n",
     "dec = make_decorator(text_color=\"blue\", bf=True)\n",
-    "dec(\"x\")\n"
+    "dec(\"x\")"
    ]
   },
   {
@@ -134,14 +194,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "894d7bc1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "({'rows': [0, 2]},\n",
+       " {'cols': [1]},\n",
+       " {'all': True},\n",
+       " (0, 0, 1),\n",
+       " ((0, 0, 0), (0, 0, 2)))"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from matrixlayout.formatting import sel_rows, sel_cols, sel_all, sel_vec, sel_vec_range\n",
     "\n",
-    "sel_rows([0, 2]), sel_cols([1]), sel_all(), sel_vec(0, 0, 1), sel_vec_range((0, 0, 0), (0, 0, 2))\n"
+    "sel_rows([0, 2]), sel_cols([1]), sel_all(), sel_vec(0, 0, 1), sel_vec_range((0, 0, 0), (0, 0, 2))"
    ]
   },
   {
@@ -155,14 +230,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "0655030e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\\\color{red}{1}'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from matrixlayout.formatting import apply_decorator, decorator_color\n",
     "\n",
-    "apply_decorator(decorator_color(\"red\"), 0, 0, 1, \"1\")\n"
+    "apply_decorator(decorator_color(\"red\"), 0, 0, 1, \"1\")"
    ]
   }
  ],
