--- a/docs/notebooks/06_rendering_templates.ipynb
+++ b/docs/notebooks/06_rendering_templates.ipynb
@@ -21,10 +21,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1fb70d41",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<svg\\n   width=\"157.51466pt\"\\n   height=\"573.80518pt\"\\n   viewBox=\"0 0 157.51466 573.80517\"\\n   version=\"1.2\"\\n   id=\"svg32\"\\n   sodipodi:docname=\"output.svg\"\\n   xmlns:inkscape=\"http://www.inkscape.org/name'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from matrixlayout.render import render_svg\n",
     "\n",
@@ -49,10 +60,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "1ad07318",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<svg\\n   width=\"157.51466pt\"\\n   height=\"573.80518pt\"\\n   viewBox=\"0 0 157.51466 573.80517\"\\n   version=\"1.2\"\\n   id=\"svg32\"\\n   sodipodi:docname=\"mini.svg\"\\n   xmlns:inkscape=\"http://www.inkscape.org/namesp'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from matrixlayout.render import render_svg_with_artifacts\n",
     "\n",
@@ -62,8 +84,9 @@
     "$1+1$\n",
     "\\end{document}\n",
     "\"\"\"\n",
-    "svg, artifacts = render_svg_with_artifacts(tex, output_dir=\"./_out\", output_stem=\"mini\")\n",
-    "svg[:200]\n"
+    "artifacts = render_svg_with_artifacts(tex, output_dir=\"./_out\", output_stem=\"mini\")\n",
+    "svg = artifacts.read_svg()\n",
+    "svg[:200]"
    ]
   },
   {
@@ -77,14 +100,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "459f4ac0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello matrixlayout'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from matrixlayout.jinja_env import render_string\n",
     "\n",
-    "render_string(\"Hello {{ name }}\", {\"name\": \"matrixlayout\"})\n"
+    "render_string(\"Hello {{ name }}\", {\"name\": \"matrixlayout\"})"
    ]
   },
   {
@@ -99,10 +133,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "cdc47762",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('\\\\draw[draw=blue, text=blue, line width=0.35pt, -{Stealth[length=2.4mm]}] ($ (A0-right.north) + (395.000000:6.0mm) $) node[anchor=west] {$ A $} -- (A0-right.north);',\n",
+       " [{'grid_pos': (0, 1), 'label': 'A_{0}', 'side': 'right'}],\n",
+       " ['\\\\draw[draw=blue, text=blue, line width=0.35pt, -{Stealth[length=2.4mm]}] ($ (A0-right.north) + (395.000000:6.0mm) $) node[anchor=west] {$ A_{0} $} -- (A0-right.north);'])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from matrixlayout.nicematrix_decor import (\n",
     "    render_delim_callout,\n",
@@ -116,7 +163,7 @@
     "layer_callouts = infer_ge_layer_callouts(matrices)\n",
     "single = render_delim_callout({\"name\": \"A0\", \"label\": \"A\"})\n",
     "multi = render_delim_callouts(layer_callouts, available_names=[\"A0\", \"A1\", \"E1\"], name_map={(0,1):\"A0\", (1,0):\"E1\", (1,1):\"A1\"})\n",
-    "single, labels[:1], multi[:1]\n"
+    "single, labels[:1], multi[:1]"
    ]
   },
   {
@@ -130,10 +177,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "b8f2ed5d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-----------------------------\n",
+      "% GE template (layout-only)\n",
+      "% Target: current nicematrix (CodeBefore/B\n"
+     ]
+    }
+   ],
    "source": [
     "from matrixlayout.jinja_env import render_template\n",
     "\n",
@@ -141,9 +198,9 @@
     "# Wrap in try/except for environments without the templates.\n",
     "try:\n",
     "    out = render_template(\"ge.tex.j2\", {\"mat_rep\": \"\", \"mat_format\": \"\", \"preamble\": \"\", \"extension\": \"\"})\n",
-    "    out[:50]\n",
+    "    print(out[50:150])\n",
     "except Exception as err:\n",
-    "    str(err)[:80]\n"
+    "    print(str(err)[:80])"
    ]
   },
   {
@@ -157,10 +214,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "74fe650a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-----------------------------\n",
+      "% GE template (layout-only)\n",
+      "% Target: current nicematrix (CodeBefore/B\n"
+     ]
+    }
+   ],
    "source": [
     "from matrixlayout.jinja_env import render_template\n",
     "\n",
@@ -168,9 +235,9 @@
     "# Wrap in try/except for environments without the templates.\n",
     "try:\n",
     "    out = render_template(\"ge.tex.j2\", {\"mat_rep\": \"\", \"mat_format\": \"\", \"preamble\": \"\", \"extension\": \"\"})\n",
-    "    out[:50]\n",
+    "    print(out[50:150])\n",
     "except Exception as err:\n",
-    "    str(err)[:80]\n"
+    "    print(str(err)[:80])"
    ]
   }
  ],
