--- a/docs/notebooks/02_qr_grids.ipynb
+++ b/docs/notebooks/02_qr_grids.ipynb
@@ -114,7 +114,8 @@
     "from matrixlayout.qr import qr_grid_bundle\n",
     "\n",
     "bundle = qr_grid_bundle(matrices=[[None, None, [[1, 2], [3, 4]], [[1, 0], [0, 1]]]])\n",
-    "bundle.keys()"
+    "bundle.tex[:120]\n",
+    "bundle.submatrix_spans[:1]\n"
    ]
   },
   {
